--- a/app/views/infos/show.html.erb
+++ b/app/views/infos/show.html.erb
@@ -35,5 +35,5 @@
   <%= @info.country %>
 </p>
 
-<%= link_to 'Edit', edit_info_path(@info) %> |
-<%= link_to 'Back', infos_path %>
+<%= link_to 'Edit', edit_info_path(@info),class:"btn btn-info" %> 
+<%= link_to 'Back', infos_path,class:"btn btn-info" %>
