--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,28 @@
-<h2>Resend confirmation instructions</h2>
+<div class="col-md-4">
+  </div>
+
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
+  <div class="col-md-4">
+  <h2>Resend confirmation instructions</h2>
 
   <div class="field">
+    <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class:"form-control"  %>
+  </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+    <%= f.submit "Resend confirmation instructions",class:"btn btn-info" %>
   </div>
-<% end %>
+  <%= render "devise/shared/links" %>
+  <% end %>
+  </div>
+  
+  <div class="col-md-4">
+  </div>
 
-<%= render "devise/shared/links" %>
+
+
