--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="col-md-4">
+  </div>
+  <div class="col-md-4">
 <h2>Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
@@ -5,21 +8,28 @@
   <%= f.hidden_field :reset_password_token %>
 
   <div class="field">
+    <div class="form-group">
     <%= f.label :password, "New password" %><br />
     <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em><br />
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+    <%= f.password_field :password, autofocus: true, autocomplete: "off", class:"form-control" %>
+  </div>
   </div>
 
   <div class="field">
+    <div class="form-group">
     <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off" , class:"form-control"%>
+  </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Change my password" %>
+    <%= f.submit "Change my password",class:"btn btn-info" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+<div class="col-md-4">
+  </div>
