--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,25 @@
-<h2>Forgot your password?</h2>
+<div class="col-md-4">
+  </div>
+
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
-
+  <div class="col-md-4">
+<h2>Forgot your password?</h2>
   <div class="field">
+    <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, class:"form-control"  %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Send me reset password instructions",class:"btn btn-info" %>
+  </div>
+  <%= render "devise/shared/links" %>
   </div>
 <% end %>
+<div class="col-md-4">
+  </div>
 
-<%= render "devise/shared/links" %>
+
