--- a/app/views/infos/_form.html.erb
+++ b/app/views/infos/_form.html.erb
@@ -1,3 +1,7 @@
+<div class="col-md-4">
+  </div>
+  <div class="col-md-4">
+    <h1>New Info</h1>
 <%= form_for(@info) do |f| %>
   <% if @info.errors.any? %>
     <div id="error_explanation">
@@ -12,34 +16,53 @@
   <% end %>
 
   <div class="field">
+    <div class="form-group">
     <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
+    <%= f.text_field :first_name , class:"form-control"%>
+  </div>
   </div>
   <div class="field">
+    <div class="form-group">
     <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
+    <%= f.text_field :last_name, class:"form-control" %>
+  </div>
   </div>
   <div class="field">
+    <div class="form-group">
     <%= f.label :gender %><br>
-    <%= f.text_field :gender %>
+    <%= f.text_field :gender, class:"form-control" %>
+  </div>
   </div>
   <div class="field">
+    <div class="form-group">
     <%= f.label :age %><br>
-    <%= f.number_field :age %>
+    <%= f.number_field :age, class:"form-control" %>
+  </div>
   </div>
   <div class="field">
+    <div class="form-group">
     <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.text_field :email , class:"form-control"%>
+  </div>
   </div>
   <div class="field">
+    <div class="form-group">
     <%= f.label :phone_number %><br>
-    <%= f.text_field :phone_number %>
+    <%= f.text_field :phone_number, class:"form-control" %>
+  </div>
   </div>
   <div class="field">
+    <div class="form-group">
     <%= f.label :country %><br>
-    <%= f.text_field :country %>
+    <%= f.text_field :country, class:"form-control" %>
+  </div>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "create info",class:"btn btn-info" %>
   </div>
 <% end %>
+<%= link_to 'Show', @info,class:"btn btn-default" %>
+<%= link_to 'Back', infos_path,class:"btn btn-default" %>
+</div>
+<div class="col-md-4">
+  </div>
