--- a/app/views/infos/edit.html.erb
+++ b/app/views/infos/edit.html.erb
@@ -1,6 +1,71 @@
-<h1>Editing Info</h1>
 
-<%= render 'form' %>
 
-<%= link_to 'Show', @info %> |
-<%= link_to 'Back', infos_path %>
+<div class="col-md-4">
+  </div>
+  <div class="col-md-4">
+    <h1>Editing Info</h1>
+<%= form_for(@info) do |f| %>
+  <% if @info.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@info.errors.count, "error") %> prohibited this info from being saved:</h2>
+
+      <ul>
+      <% @info.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <div class="form-group">
+    <%= f.label :first_name %><br>
+    <%= f.text_field :first_name , class:"form-control"%>
+  </div>
+  </div>
+  <div class="field">
+    <div class="form-group">
+    <%= f.label :last_name %><br>
+    <%= f.text_field :last_name, class:"form-control" %>
+  </div>
+  </div>
+  <div class="field">
+    <div class="form-group">
+    <%= f.label :gender %><br>
+    <%= f.text_field :gender, class:"form-control" %>
+  </div>
+  </div>
+  <div class="field">
+    <div class="form-group">
+    <%= f.label :age %><br>
+    <%= f.number_field :age, class:"form-control" %>
+  </div>
+  </div>
+  <div class="field">
+    <div class="form-group">
+    <%= f.label :email %><br>
+    <%= f.text_field :email , class:"form-control"%>
+  </div>
+  </div>
+  <div class="field">
+    <div class="form-group">
+    <%= f.label :phone_number %><br>
+    <%= f.text_field :phone_number, class:"form-control" %>
+  </div>
+  </div>
+  <div class="field">
+    <div class="form-group">
+    <%= f.label :country %><br>
+    <%= f.text_field :country, class:"form-control" %>
+  </div>
+  </div>
+  <div class="actions">
+    <%= f.submit "create info",class:"btn btn-info" %>
+  </div>
+<% end %>
+<%= link_to 'Show', @info,class:"btn btn-default" %>
+<%= link_to 'Back', infos_path,class:"btn btn-default" %>
+</div>
+<div class="col-md-4">
+  </div>
+
